force-app/main/default/objects/objects/Related_List_Action_Configuration__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>For URL type provide in the format: key1=value&amp;key2=value
For Lightning Aura Component type provide in the format: {key1:&#39;value1&#39;, key2:&#39;value2&#39;}</description>
    <inlineHelpText>For URL type provide in the format: key1=value&amp;key2=value
For Lightning Aura Component type provide in the format: {key1:&#39;value1&#39;, key2:&#39;value2&#39;}</inlineHelpText>
    <label>Parameters</label>
    <type>TextArea</type>
</CustomField>