force-app/main/default/objects/objects/Related_List_Action_Configuration__mdt/fields/Related_List_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Related_List_Configuration__c</fullName>
    <label>Related List Configuration</label>
    <referenceTo>Related_List_Configuration__mdt</referenceTo>
    <relationshipLabel>Related List Action Configurations</relationshipLabel>
    <relationshipName>Related_List_Action_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>