force-app/main/default/objects/objects/Related_List_Action_Configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ListAction</fullName>
                <default>true</default>
                <label>List Action</label>
            </value>
            <value>
                <fullName>RowAction</fullName>
                <label>Row Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>